--- a/server/package.json
+++ b/server/package.json
@@ -3,13 +3,17 @@
     "version": "1.0.0",
     "main": "src/main.js",
     "scripts": {
-        "start": "node src/main.js"
+        "start": "nodemon src/main.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^5.1.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.10"
     }
 }
