--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@prisma/client": "^6.7.0",
         "cors": "^2.8.5",
         "express": "^5.1.0"
     },
     "devDependencies": {
-        "nodemon": "^3.1.10"
+        "nodemon": "^3.1.10",
+        "prisma": "^6.7.0"
     }
 }
